--- a/roles/am_web_conf/templates/web_conf_temp.j2
+++ b/roles/am_web_conf/templates/web_conf_temp.j2
@@ -1,5 +1,5 @@
 {% for host in ansible_play_hosts_all %}
 tls_server_config:
-  cert_file: /etc/alertmanager/keys/{{host}}.crt
-  key_file: /etc/alertmanager/keys/{{host}}.key
+  cert_file: /etc/alertmanager/keys/{{hostvars[host]['ansible_facts']['hostname']}}.crt
+  key_file: /etc/alertmanager/keys/{{hostvars[host]['ansible_facts']['hostname']}}.key
 {% endfor %}
