--- a/roles/am_web_conf/templates/web_conf_temp.j2
+++ b/roles/am_web_conf/templates/web_conf_temp.j2
@@ -1,4 +1,4 @@
 tls_server_config:
-  cert_file: /etc/alertmanager/keys/{{hostvars[host]['ansible_facts']['hostname']}}.crt
-  key_file: /etc/alertmanager/keys/{{hostvars[host]['ansible_facts']['hostname']}}.key
+  cert_file: /etc/alertmanager/keys/{{ ansible_facts['hostname'] }}.crt
+  key_file: /etc/alertmanager/keys/{{ ansible_facts['hostname'] }}.key
 
